applications/noel/ApplicationRegistrations/coral-secrets-app/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: noel-coral-secrets-app-development
