applications/noel/ApplicationRegistrations/coral-secrets-app/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coral-secrets-app-ingress
  namespace: noel-coral-secrets-app-development
spec:
  rules:
  - host: development.coral-secrets-app.noel.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coral-secrets-app
            port:
              number: 80
